--- a/style.css
+++ b/style.css
@@ -42,6 +42,37 @@ body{
 .menu-item i{
     color: white;
 }
+
+#VoiceInput{
+    margin-left: 90px;
+    width: calc(100vw - 100px);
+    height: 60px;
+    position: fixed;
+    bottom: 10px;
+    background-color: rgb(48, 48, 48);
+    border-radius: 10px;
+    display: flex;
+}
+#VoiceInput #inputBox{
+    outline: 0;
+    height: 100%;
+    flex-grow: 1;
+    border-radius: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    color: #aaa;
+    padding: 0 16px;
+}
+#VoiceInput i{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    font-size: 20px;
+}
 .column{
     height: 100%;
     width: calc(25% - 10px);
@@ -359,10 +390,53 @@ body{
 /* WEATHER COMPONENT */
 #weather .component-header{
     background-color: rgb(42, 157, 165);
+    display: flex;
+    justify-content: space-between;
+}
+#weather .component-header span{
+    color: white;
 }
 #weather .component-body{
     display: flex;
 }
+#current-weather{
+    height: 80px;
+    width: 100%;
+    display: flex;
+}
+#weather-left{
+    text-align: left;
+    width: 60%;
+    display: flex;
+}
+#weather-left-main{
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#weather-left-secondary{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 15px;
+}
+#weather-right{
+    text-align: right;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#weather-right #cityName{
+   font-size: 30px; 
+}
+
+
 
 /* JQuery Dragging */
 .ui-draggable-dragging {
