--- a/style.css
+++ b/style.css
@@ -386,6 +386,62 @@ body{
     color: rgba(0, 0, 0, 0.2);
     font-size: 30px;
 }
+/* CALCULATOR COMPONENT */
+#calculator .component-header{
+    background-color: #618870;
+}
+#calculator .component-header span{
+    color: white;
+}
+#calculator .component-body{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+#calculator #output{
+    width: 100%;
+    height: 70px;
+    padding: 9px;
+    font-size: 40px;
+    background-color: white;
+    margin: 5px 0 20px 0;
+    display: flex;
+    align-items: end;
+    justify-content: right;
+    border-radius: 10px;
+}
+#calculator #buttons{
+	display: grid;
+	grid-template-columns: repeat(4, 93px);
+	grid-template-rows: repeat(5, 60px);
+	grid-gap: 10px;
+    color: white;
+}
+#calculator .calc-item{
+    background-color: #a7a7a7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: transform 0.1s ease-in-out;
+    user-select: none;
+}
+#calculator .special{
+    background-color: #909090;
+}
+#calculator .equal{
+    background-color: #618870;
+}
+#calculator .clear{
+    background-color: #9e6666;
+}
+#calculator .span-2 {
+    grid-column: span 2;
+}
 
 /* WEATHER COMPONENT */
 #weather .component-header{
@@ -436,7 +492,54 @@ body{
    font-size: 30px; 
 }
 
+/* SHOPPING SHORTCUTS COMPONENT */
+#shop .component-header{
+    background-color: #887261;
+}
+#shop .component-header span{
+    color: white;
+}
 
+/* GAMING SHORTCUTS COMPONENT */
+#gaming .component-header{
+    background-color: #252579;
+}
+#gaming .component-header span{
+    color: white;
+}
+
+/* VIDEO SHORTCUTS COMPONENT */
+#video .component-header{
+    background-color: #6b2525;
+}
+#video .component-header span{
+    color: white;
+}
+
+/* SHORTCUTS GENERAL COMPONENT */
+.shortcut .component-body{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    justify-content: space-between;
+}
+.shortcut .shortcut-item{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    white-space: nowrap;
+}
+.shortcut a{
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
 
 /* JQuery Dragging */
 .ui-draggable-dragging {
