--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body{
     margin: 0;
     background-color: rgb(17, 17, 17);
 }
+a{
+    color: white;
+    text-decoration: none;
+}
 #wrapper{
     width: 100vw;
     height: 100vh;
