--- a/style.css
+++ b/style.css
@@ -110,9 +110,13 @@ a{
 }
 #clock .component-body{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 50px;
+}
+#clock .date-time{
+    font-size: 30px;
 }
 /* SPOTIFY COMPONENT */
 #spotify .component-header{
@@ -122,7 +126,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10px;
+    font-size: 16px;
 }
 #spotify #cover{
     height: 100px;
