--- a/style.css
+++ b/style.css
@@ -160,6 +160,79 @@ a{
 #spotify .song-title{
     font-size: 20px;
 }
+/* LIGHTS COMPONENT */
+#lights .component-header{
+    background-color: #ad9f1f;
+}
+#lights .component-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#lights #light-switches{
+    width: 100%;
+    display: flex;
+    font-size: 25px;
+    gap: 20px;
+    padding-bottom: 10px;
+}
+#lights .allon, #lights .alloff{
+    color: white;
+    border-radius: 10px;
+    width: 60px;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#lights .allon{
+    background-color: #159f1a;
+}
+#lights .alloff{
+    background-color: #9f3115;
+}
+#lights .allon:hover, #lights .alloff:hover{
+transform: scale(0.98);
+}
+#lights #light-sliders{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+#lights input[type="range"]{
+    width: 90%;
+    padding: 10px 0;
+}
+#lights .brightness-range{
+    filter: hue-rotate(207deg) brightness(1.4);
+}
+#lights .temperature-range{
+    filter: hue-rotate(188deg) brightness(1.0);
+}
+#lights #light-sliders span{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#lights .brght, #lights .temp {
+    font-size: 20px;
+    color: white;
+    width: 30px;
+    aspect-ratio: 1/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+
+}
+#lights .brght{
+    background-color: #ad9f1f;
+}
+#lights .temp{
+    background-color: #ad641f;
+}
 /* TODO LIST COMPONENT */
 #todo .component-header{
     background-color: rgb(165, 61, 42);
